# combustion

./: .gitignore  CH4+O2.ron  CH4.ron  Cargo.toml  H2+O2.ron  H2.ron  LiDryer.ron  README.md  build.rs  cantera.cpp  cantera.rs  cpu.rs  cuda.rs  device.rs  gpu.rs  info.rs  lib.rs  main.cpp  main.rs  model.rs  perf.rs  plot.rs  reaction.rs  reaction_max_live_count.rs  table.h  test.rs  transport.rs  vk_layer_settings.txt  vulkan.rs  yaml.rs
accel/: Cargo.toml  cuda.rs  kernel.rs  main.rs
ast/: Cargo.toml  interpret.rs  lib.rs
cantera/: .gitignore  Cargo.toml  build.rs  cantera.cpp  ct.h  main.rs  reaction.rs  transport.rs
cantera/src/: cantera.rs  main.rs  reaction.rs  transport.rs
chemistry/: Cargo.toml  lib.rs  reaction.rs
chemistry/transport/: collision_integrals.rs
convert/: Cargo.toml  lib.rs
cuda/: .gitignore  Cargo.toml  H2+O2.ron  Makefile  README.md  build.rs  lib.rs  main.cpp  main.cu  main.rs  model.h  reaction
cvode/: Cargo.toml  lib.rs  main.rs
examples/: mass_fractions.rs  plot.rs
gpu/: .gitignore  Cargo.toml  build.rs  main.comp  main.rs  vulkan.rs
gpu/f/: Cargo.toml  main.rs
gpu/vulkan/: include_bytes_align_as.rs  mod.rs
interpret/: Cargo.toml  main.rs
ir/: Cargo.toml  lib.rs
macro/: Cargo.toml  lib.rs
model/: Cargo.toml  lib.rs
plot/: .gitignore  CH4+O2.ron  Cargo.toml  README.md  build.rs  cantera.cpp  main.rs
plot/src/: main.rs
polynomial/: Cargo.toml  lib.rs
reaction/: .gitignore  Cargo.toml  lib.rs  main.cu  main.rs  reaction.cu  species.h
reaction-cuda/: Cargo.toml  main.rs
spirv/: Cargo.toml  lib.rs
src/: cranelift.rs  explicit.rs  jacobian.rs  lib.rs  main.rs  model.rs  parse.rs  plot.rs  program.rs  reaction.rs  ron.rs  test.rs  transport.rs
src/transport/: collision_integrals.rs  test.rs
system/: Cargo.toml  lib.rs
system/src/: lib.rs  transport.rs
transport/: Cargo.toml  build.rs  collision_integrals.rs  lib.rs  main.cu  main.rs  parse.rs
vulkan/: Cargo.toml  lib.rs
yaml/: Cargo.toml  lib.rs  main.rs
yaml/src/: main.rs
