cargo-features=['edition2021']
package={name= 'combustion', description= 'Chemical reaction kinetics and species transport properties', version= '0.0.0', edition= '2021', default-run='main'}
features={yaml=['dep:yaml','pest_derive','pest'], transport=['nalgebra'], gpu=['spirv','vulkan','anyhow'], plot=['cvode','ui','image','png','anyhow'], default=['anyhow','yaml','itertools','rand']}
lib={path='lib.rs'}
bin=[
	{name='main', path='main.rs', required-features=['anyhow','yaml','itertools']},
	{name='cantera', path='cantera.rs', required-features=['anyhow','yaml','itertools','rand']},
	{name='plot', path='plot.rs', required-features=['anyhow','yaml','plot']}
]

[dependencies]
fehler='*'
anyhow={optional=true, version='*' }
serde={version='*', features=['derive']}
strum='*'
strum_macros='*'
linear-map={version='*', features=['serde_impl']}
itertools={optional=true, version='*' }
iter={git='https://github.com/Matthias-Fauconneau/iter'}
num={git='https://github.com/Matthias-Fauconneau/num'}
yaml={optional=true, version='*', package='yaml-rust'}
pest_derive={optional=true, version='*' }
pest={optional=true, version='*' }
float-pretty-print='*'
ast={path='ast'}
rand={optional=true, version='*'}
nalgebra={optional=true, version='*'}
spirv={optional=true, path='spirv', package='ast-spirv'}
vulkan={optional=true, path='vulkan'}
cvode={optional=true, path='cvode'}
ir={optional=true, path='ir', features=['jit']}
ui={optional=true, git='https://github.com/Matthias-Fauconneau/ui', features= ['plot']}
image={optional=true, git='https://github.com/Matthias-Fauconneau/image'}
png={optional=true, package= 'image', version='', default-features=false, features= ['png']}
