package={name='combustion', description='Chemical reaction kinetics and species transport properties', version='0.0.0', edition='2021', default-run='cantera'}
lib={path='lib.rs'}
bin=[
	{name='cantera', path='cantera.rs', required-features=['main','rand','cantera']},
	{name='plot', path='plot.rs', required-features=['main','plot']},
#	{name='cuda', path='cuda.rs', required-features=['main']},
]

[features]
myaml=['yaml']#,'pest_derive','pest'] #dep:yaml
interpret=['ast/interpret']
main=['myaml','itertools','anyhow','color-backtrace']
transport=['nalgebra']
vpu=['spirv','vulkan','anyhow','libc']
plot=['ui','image','png','anyhow']
cantera=[]
check=[]
default=['interpret','main','rand','cantera','transport']

[dependencies]
iter={git='https://github.com/Matthias-Fauconneau/iter'}
ordered-float='*'
derive_more='*'
fehler={git='https://github.com/withoutboats/fehler'}
anyhow={optional=true, version='*' }
serde={version='*', features=['derive']}
strum='*'
strum_macros='*'
linear-map={version='*', features=['serde_impl']}
itertools={optional=true, version='*' }
num={git='https://github.com/Matthias-Fauconneau/num'}
yaml={optional=true, version='*', package='yaml-rust'}
#pest_derive={optional=true, version='*' }
#pest={optional=true, version='*' }
float-pretty-print='*'
float_next_after='*'
ast={path='ast'}
rand={optional=true, version='*'}
nalgebra={optional=true, version='*'}
spirv={optional=true, path='spirv', package='ast-spirv'}
vulkan={optional=true, path='vulkan'}
cvode={optional=true, path='cvode'}
ir={optional=true, path='ir', features=['jit']}
color-backtrace={optional=true, version='*'}
ui={optional=true, git='https://github.com/Matthias-Fauconneau/ui', features= ['plot']}
image={optional=true, git='https://github.com/Matthias-Fauconneau/image'}
png={optional=true, package= 'image', version='*', default-features=false, features= ['png']}
libc={optional=true, version='*'}
cuda= {optional=true, package='rustacuda', git='https://github.com/Matthias-Fauconneau/RustaCuda'}
serde_yaml= '*'