[package]
name= 'combustion-cantera'
description= 'Validates transport properties against Cantera'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition= '2018'

#[build-dependencies]
#bindgen= ''

[features]
reaction= ['combustion/reaction','cvode']
transport= ['combustion/transport']
default= ['transport']

[dependencies]
fehler= ''
error= {package='anyhow', version=''}
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
num= {git='https://github.com/Matthias-Fauconneau/num'}
itertools= ''
combustion= {path='..', default-features= false}
cvode= {path='../cvode', optional=true}
trace= {git='https://github.com/Matthias-Fauconneau/trace'}

[[bin]]
name= 'main'
path= 'main.rs'
