[package]
name= 'combustion-cantera'
description= 'Validates transport properties against Cantera'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition= '2018'

#[build-dependencies]
#bindgen= ''

[features]
reaction= ['combustion/reaction','cvode','itertools']
transport= ['combustion/transport']
default= ['reaction']

[dependencies]
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
num= {git='https://github.com/Matthias-Fauconneau/num'}
combustion= {path='..', default-features= false, features=['reaction','jit']}
cvode= {path='../cvode', optional=true}
trace= {git='https://github.com/Matthias-Fauconneau/trace', optional=true}
itertools= {version='', optional=true}

[[bin]]
name= 'main'
path= 'main.rs'
