[package]
name= 'combustion-cantera'
description= 'Validates transport properties against Cantera'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition= '2018'

[features]
reaction= ['combustion/reaction', 'combustion/jit', 'cvode', 'itertools']
transport= ['combustion/transport', 'itertools']
default= ['transport','yaml']

[dependencies]
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
num= {git='https://github.com/Matthias-Fauconneau/num'}
combustion= {path='..', default-features= false}
cvode= {path='../cvode', optional=true}
trace= {git='https://github.com/Matthias-Fauconneau/trace', optional=true}
itertools= {version='', optional=true}
yaml= {path='../yaml', package='combustion-yaml', optional=true}

[[bin]]
name= 'main'
path= 'main.rs'
