[package]
name= 'cuda'
version= '0.0.0'
edition= '2018'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']

[dependencies]
fehler= ''
anyhow= ''
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
reaction= {path='../reaction'}
cranelift-codegen= ''
combustion= {path='..'}
rustacuda= ''
itertools= ''
cranelift-frontend= ''

[[bin]]
name= 'cuda'
path= 'main.rs'
