[package]
name= 'cvode'
description= 'Interface to Sundials CVODE'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition= '2018'

[dependencies]
sundials-sys= {git='https://github.com/Matthias-Fauconneau/sundials-sys', default-features=false, features=['cvode']}

[lib]
path= 'lib.rs'
