[package]
name= 'gpu'
version= '0.0.0'
edition= '2018'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']

[dependencies]
combustion= {path='..'}
ash= ''
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
itertools= ''
fehler= ''
num= {git='https://github.com/Matthias-Fauconneau/num'} #debug

[build-dependencies]
combustion= {path='..'}
itertools= ''
shaderc= ''

[[bin]]
name= 'gpu'
path= 'main.rs'
