[package]
name= 'gpu'
version= '0.0.0'
edition= '2018'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']

[dependencies]
fehler= ''
anyhow= ''
reaction= {path='../reaction'}
cranelift-codegen= ''
combustion= {path='..', features=['cranelift']}
shaderc= ''
ash= ''
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
itertools= ''
num= {git='https://github.com/Matthias-Fauconneau/num'} #debug

[[bin]]
name= 'gpu'
path= 'main.rs'
