[package]
name= 'interpret'
version= '0.0.0'
edition= '2018'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']

[dependencies]
reaction= {path='../reaction'}
cranelift-codegen= {optional= true, version=''}
cranelift-interpreter= {optional= true, version=''}
pretty_env_logger= ''

[[bin]]
name= 'interpret'
path= 'main.rs'

[patch.crates-io]
cranelift-interpreter= {git='https://github.com/Matthias-Fauconneau/wasmtime'}
cranelift-codegen= {git='https://github.com/Matthias-Fauconneau/wasmtime'}
cranelift-entity= {git='https://github.com/Matthias-Fauconneau/wasmtime'}
cranelift= {git='https://github.com/Matthias-Fauconneau/wasmtime'}
#cranelift-interpreter= {path='../../wasmtime/cranelift/interpreter'}
#cranelift-codegen= {path='../../wasmtime/cranelift/codegen'}
#cranelift-entity= {path='../../wasmtime/cranelift/entity'}
#cranelift= {path='../../wasmtime/cranelift/umbrella'}
