[package]
name= "combustion-plot"
version= "0.0.0"
authors= ["Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition= "2018"

[dependencies]
fehler= ''
error= {package='anyhow', version=''}
combustion= {path='..', features=['reaction']}
cranelift-codegen= ''
cranelift-module= ''
cranelift-native= ''
cranelift-jit= ''
cvode= {path='../cvode', features=['build_libraries']}
ui= {git='https://github.com/Matthias-Fauconneau/ui', features=['plot']}
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
itertools= ''
xy= {git='https://github.com/Matthias-Fauconneau/xy'}

[[bin]]
name= 'plot'
path= 'main.rs'

#[patch.'https://github.com/Matthias-Fauconneau/num']
#num= {path='../../num'}
#[patch.'https://github.com/Matthias-Fauconneau/ui']
#ui= {path='../../ui'}
