cargo-features = ['edition2021']

[package]
name='combustion-plot'
version='0.0.0'
authors=['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition='2021'

[dependencies]
anyhow=''
itertools=''
num= {git='https://github.com/Matthias-Fauconneau/num'}
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
combustion= {path='..', features=['reaction']}
cvode= {path='../cvode'}
ui= {git='https://github.com/Matthias-Fauconneau/ui', features= ['plot']}
image= {git='https://github.com/Matthias-Fauconneau/image'}
png= {package= 'image', version='', default-features=false, features= ['png']}

[[bin]]
name= 'plot'
path= 'main.rs'
