cargo-features=['edition2021']
package= { name= 'reaction', description= 'Chemical reaction kinetics', version= '0.0.0', edition= '2021' }
lib = {path='lib.rs'}

[dependencies]
chemistry= {path='../chemistry'}
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
linear-map='*'
ast= {path='../ast'}
