package={edition='2021', name='ast-spirv', description='Translate AST to SPIRV', version='0.0.0'}
lib={path='lib.rs'}

[dependencies]
ordered-float='*'
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
linear-map='*'
ast= {path='../ast'}
spirv= {package='spirv_headers', git='https://github.com/Matthias-Fauconneau/rspirv'}
rspirv={git='https://github.com/Matthias-Fauconneau/rspirv'}
spirv-tools={version='*', default-features=false, features=['use-installed-tools']}
