[package]
name= 'system'
description= 'Chemical reaction kinetics (adiabatic constant-pressure ideal gas batch reactor)'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition= '2018'

[dependencies]
ron= ''
serde= ''
linear-map= {version='', features = ['serde_impl']}
strum= ''
strum_macros= ''

[lib]
path= 'lib.rs'
