[package]
name= 'system'
description= 'Chemical reaction kinetics'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition= '2018'

[dependencies]
fehler= ''
ron= ''
model={path='../model'}
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
num= {git='https://github.com/Matthias-Fauconneau/num'}
serde= ''
linear-map= {version='', features = ['serde_impl']}
unwrap= ''
