cargo-features=['edition2021']
package= { name= 'transport', description= 'Compound transport properties', version= '0.0.0', edition= '2021' }
lib = {path='lib.rs'}

[dependencies]
chemistry= {path='../chemistry'}
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
num= {git='https://github.com/Matthias-Fauconneau/num'}
ast= {features=['num'], path='../ast'}
nalgebra='*'
