cargo-features=['edition2021']
[package]
edition= '2021'
name= 'yaml-model'
description= 'Import YAML model'
version= '0.0.0'

[dependencies]
fehler=''
anyhow=''
chemical-model= {path="../model"}
ron=''
yaml-rust=''
pest_derive=''
pest=''
itertools=''
float-pretty-print=''
pretty_assertions=''

[lib]
path= 'lib.rs'

[[bin]]
name= 'yaml'
path= 'main.rs'
