cargo-features=['edition2021']
[package]
edition= '2021'
name= 'yaml-model'
description= 'Import YAML model'
version= '0.0.0'

[dependencies]
iter= {git='https://github.com/Matthias-Fauconneau/iter'}
chemical-model= {path="../model"}
yaml-rust=''
pest_derive=''
pest=''
itertools=''
float-pretty-print=''

[lib]
path= 'lib.rs'

[[bin]]
name= 'yaml'
path= 'main.rs'
